; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/arcnet/extr_com90io.c_put_whole_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/arcnet/extr_com90io.c_put_whole_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@AUTOINCflag = common dso_local global i32 0, align 4
@COM9026_REG_W_ADDR_HI = common dso_local global i32 0, align 4
@COM9026_REG_W_ADDR_LO = common dso_local global i32 0, align 4
@COM9026_REG_RW_MEMDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32, i32, i8*)* @put_whole_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_whole_buffer(%struct.net_device* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = getelementptr inbounds %struct.net_device, %struct.net_device* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %6, align 4
  %14 = lshr i32 %13, 8
  %15 = load i32, i32* @AUTOINCflag, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* @COM9026_REG_W_ADDR_HI, align 4
  %19 = call i32 @arcnet_outb(i32 %16, i32 %17, i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = and i32 %20, 255
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* @COM9026_REG_W_ADDR_LO, align 4
  %24 = call i32 @arcnet_outb(i32 %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %29, %4
  %26 = load i32, i32* %7, align 4
  %27 = add i32 %26, -1
  store i32 %27, i32* %7, align 4
  %28 = icmp ne i32 %26, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %25
  %30 = load i8*, i8** %8, align 8
  %31 = getelementptr inbounds i8, i8* %30, i32 1
  store i8* %31, i8** %8, align 8
  %32 = load i8, i8* %30, align 1
  %33 = sext i8 %32 to i32
  %34 = load i32, i32* %9, align 4
  %35 = load i32, i32* @COM9026_REG_RW_MEMDATA, align 4
  %36 = call i32 @arcnet_outb(i32 %33, i32 %34, i32 %35)
  br label %25

37:                                               ; preds = %25
  ret void
}

declare dso_local i32 @arcnet_outb(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
